CHANGES

release 73.6
 - live environment might be set explicitly or implicitly (default) RT#325903
   for the purpose of log file location
 - st::api::lims class variable for inline index end
 - deamon monitor script, daemon parent class and tracking related daemons moved to
   this project from instrument_handling

release 73.5
 - mysql client does not read configuration in default places to avoid reading wrong configuration
 - use password for the root user on a local test database

release 73.4
- build procedure for the web server
- test that resets modification time of test files is directed away from source distribution
- top-level .gitignore file to stop git reacting to back-up files and files generated in a normal build
- reference finder to return no reference if the sample is not suitable for alignment RT#313168
- calling abs_path for non-existing files breaks under ./Build test with latest CPAN modules
    reference finder refactored to ensure that abs_path is called on existing directories
- tests improvements

release 73.3
- change MiSeq samplesheet writing location to sf49

release 73.2
- get build version from git tag or version with Keith's gitver script
- inject module version into npg::view when copying it to blib

release 73.1
- rename NPG_REFERENCE_REPOSITORY type to NPG_TRACKING_REFERENCE_REPOSITORY
  to allow for the new and original npg_common modules to co-exist
- npg_tracking::data::reference::list - do not export repository root since
  this is only needed for testing

release 73.0
- ref&bait finders and runfolder modules - copies created under npg_tracking RT#306995
  dependencies withing this svn project refactored to use new modules
- Build.PL amended to install a version of CGI compatible with the post requests in tests
- sample_description method added to the lims interface
- ensure correct number of lanes in NPG (tracking GUI and the database) for HiSeq2500 RT#306985

release 72.8