@@ -16,7 +16,6 @@ use LWP::UserAgent;
 use HTTP::Request::Common;
 
 use Readonly; Readonly::Scalar our $VERSION => do { my ($r) = q$LastChangedRevision: 8316 $ =~ /(\d+)/mxs; $r; };
-## no critic (Documentation::RequirePodAtEnd)
 
 =head1 NAME
 
