@@ -1,10 +1,7 @@
 #########
 # Author:        Marina Gourtovaia
-# Maintainer:    $Author: mg8 $
 # Created:       20 July 2011
-# Last Modified: $Date: 2013-01-23 16:49:39 +0000 (Wed, 23 Jan 2013) $
-# Id:            $Id: lims.pm 16549 2013-01-23 16:49:39Z mg8 $
-# $HeadURL: svn+ssh://svn.internal.sanger.ac.uk/repos/svn/new-pipeline-dev/npg-tracking/trunk/lib/st/api/lims.pm $
+# copied from: svn+ssh://svn.internal.sanger.ac.uk/repos/svn/new-pipeline-dev/npg-tracking/trunk/lib/st/api/lims.pm, r16549
 #
 
 package st::api::lims;
@@ -16,6 +13,7 @@ use MooseX::StrictConstructor;
 use MooseX::Aliases;
 use MooseX::ClassAttribute;
 use XML::LibXML;
+use Readonly;
 
 use npg::api::run;
 use st::api::batch;
@@ -27,15 +25,9 @@ with qw/  npg_tracking::glossary::run
           npg_tracking::glossary::tag
        /;
 
-use Readonly; Readonly::Scalar our $VERSION => do { my ($r) = q$Revision: 16549 $ =~ /(\d+)/mxs; $r; };
-
 =head1 NAME
 
 st::api::lims
-
-=head1 VERSION
-
-$Revision: 16549 $
 
 =head1 SYNOPSIS
 
@@ -1212,6 +1204,10 @@ __END__
 
 =item Moose
 
+=item MooseX::Aliases
+
+=item MooseX::ClassAttribute
+
 =item MooseX::StrictConstructor
 
 =item Carp
@@ -1220,7 +1216,7 @@ __END__
 
 =item Readonly
 
-=item  XML::LibXML
+=item XML::LibXML
 
 =item npg::api::run
 
